# GYMBro-ai-service

./: pyproject.toml  requirements.txt
app/: config.py  llm.py  main.py  schemas.py  security.py
app/routers/: nutrition.py  recommendation.py  training.py
