[project]
name = "ai-service"
version = "0.1.0"
description = "Сервис с нейросетью для фитнес-бота"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "alembic/versions",
]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "W",
    "UP",
    "B",
    "RUF",
]

ignore = [
    "E501",
    "E402",
    "F401",
    "F403",
    "B008",
    "D",
    "ANN",
    "PLR",
    "C901",
    "SIM",
    "RUF001",
    "RUF002",
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"alembic/**" = ["D", "E501", "F403"]
"tests/**" = ["D", "ANN", "PLR"]
"**/migrations/**" = ["D", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"